[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cube_fit"
version = "0.0.1"
authors = [
    { name = "Enrico Eberhard", email = "enrico@aica.tech" },
]
description = "Find the pose of a cube from a collection of surface points"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["numpy", "scipy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
plot = ["matplotlib"]

[project.urls]
"Homepage" = "https://github.com/eeberhard/cube-fit"
"Bug Tracker" = "https://github.com/eeberhard/cube-fit/issues"
